--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,10 +7,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog">Blog</a>
-		
-		<h1>Hello World</h1>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+        <a href="/blog">Blog</a>
+
+        <h1>Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
+        
+      </body>
 	</body>
 </html>
